# US-3.4: Generate directions to my next class

appId: host.exp.Exponent

---
- runFlow:
    file: _launch-expo-go.yaml
- tapOn: 
- tapOn: School
- tapOn: Directions
- tapOn: FROM, Current location
- tapOn: "Room #"
- tapOn: MB-1.115
- tapOn: "Room #"
- tapOn: FROM
- tapOn: "Room #"
- tapOn: "0023"
- tapOn: Exit H Building
- doubleTapOn:
    point: 88%,17%
- doubleTapOn:
    point: 87%,61%
- tapOn: Enter MB Building
- doubleTapOn:
    point: 90%,26%